--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<%= if current_customer %>
+  Logged in as <%= current_customer.name %> | <%= link_to 'Logout', '/logout' %>
+<% else %>
+  <%= link_to 'Signin', '/signin' %> | <%= link_to 'Signup', '/signup' %>
+<% end %>
 
 <%= yield %>
 
